# crispr_pegrna_design

./: .gitignore
crispr_pegrna_design/: pyproject.toml
crispr_pegrna_design/crispr_pegrna_design/: __init__.py
crispr_pegrna_design/crispr_pegrna_design/framework/: CrisprPegrnaDesign.py
notebooks/: 20221116 Prepare LDLR pegRNA for PRIDICT (1).ipynb
