[tool.poetry]
name = "crispr-pegrna-design"
version = "0.1.0"
description = ""
authors = ["Basheer Becerra <bbecerr@outlook.com>"]
readme = "README.md"
packages = [{include = "crispr_pegrna_design"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
biopython = "^1.81"
typeguard = "^2.13.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ipykernel = "^6.21.2"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
